new: banner added

--- a/src/app/components/organisms/navbar/navbar.component.html
+++ b/src/app/components/organisms/navbar/navbar.component.html
@@ -3,7 +3,6 @@
     <img src="../../../../assets/logo.ico" alt="Logo">
   </div>
   <ul class="menu">
-    <li><app-button-atom [size]="'s'" [type]="'main'" (click)="onPerfumButtonClick()">Perfumes</app-button-atom></li>
-    <li><app-button-atom [size]="'s'" [type]="'main'">Nosotros</app-button-atom></li>
+    <li><h3>Amor y Fragancias L&J</h3></li>
   </ul>
 </div>
