--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,10 +31,10 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #fde65e;
+    background-color: #818180;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #FDE02F;
+    background-color: #818180;
 }
