new: implement search bar and cards

--- a/src/app/components/atoms/banner/banner.component.html
+++ b/src/app/components/atoms/banner/banner.component.html
@@ -5,9 +5,9 @@
     class="banner-image"
   />
   <div class="banner-content">
-    <h1 class="banner-title">Título del Banner</h1>
+    <h1 class="banner-title">Bienvenidos</h1>
     <p class="banner-text">
-      Texto descriptivo del banner que se adapta al tamaño de la pantalla
+      Explora nuestro mundo de esencias exclusivas para todos los gustos y estilos.
     </p>
   </div>
 </div>
