--- a/src/app/components/organisms/perfums-container/perfums-container.component.html
+++ b/src/app/components/organisms/perfums-container/perfums-container.component.html
@@ -1,28 +1,32 @@
 <div class="fragrance-container">
-    <app-search
-      [placeholder]="'Busca tu fragancia favorita'"
-      [debounceDelay]="300"
-      (searchTermChange)="onSearchTerm($event)"
-      (searchError)="handleSearchError($event)"
-      (loadingChange)="onLoadingChange($event)"
-    ></app-search>
+  <app-search
+    [placeholder]="'Busca tu fragancia favorita'"
+    [debounceDelay]="300"
+    (searchTermChange)="onSearchTerm($event)"
+    (searchError)="handleSearchError($event)"
+    (loadingChange)="onLoadingChange($event)"
+  ></app-search>
 
-    <!-- Sección de resultados -->
-    <div class="results-section" *ngIf="!isLoading">
-      <div *ngFor="let fragrance of fragrances" class="fragrance-card">
-        <!-- Contenido de la tarjeta de fragancia -->
-        <h3>{{fragrance.name}}</h3>
-        <!-- Más detalles de la fragancia -->
+  <!-- Sección de resultados -->
+  <div class="results-section" *ngIf="!isLoading">
+    <div *ngFor="let fragrance of fragrances" class="fragrance-card">
+      <!-- Contenido de la tarjeta de fragancia -->
+      <div class="card-image">
+        <img
+          src="../../../../assets/images/Emethyst.png"
+          alt="Amethyst perfum"
+        />
       </div>
-    </div>
-
-    <!-- Loading state -->
-    <div class="loading-section" *ngIf="isLoading">
-      Buscando fragancias...
-    </div>
-
-    <!-- Error state -->
-    <div class="error-section" *ngIf="error">
-      {{error}}
+      <h3>{{ fragrance.name }}</h3>
+      <!-- Más detalles de la fragancia -->
     </div>
   </div>
+
+  <!-- Loading state -->
+  <div class="loading-section" *ngIf="isLoading">Buscando fragancias...</div>
+
+  <!-- Error state -->
+  <div class="error-section" *ngIf="error">
+    {{ error }}
+  </div>
+</div>
