new: custom image styles and center in card

--- a/src/app/components/organisms/navbar/navbar.component.html
+++ b/src/app/components/organisms/navbar/navbar.component.html
@@ -4,5 +4,6 @@
   </div>
   <ul class="menu">
     <li><h3>Amor y Fragancias L&J</h3></li>
+    <!-- <li><app-button-atom [size]="'s'" [type]="'main'" (click)="onPerfumButtonClick()">Perfumes</app-button-atom></li> -->
   </ul>
 </div>
