new: add name and gender to cards

--- a/src/app/components/atoms/card-atom/card-atom.component.scss
+++ b/src/app/components/atoms/card-atom/card-atom.component.scss
@@ -29,7 +29,14 @@
   }
 
   h4 {
-    margin: 10px 0;
+    margin: 10px 0 0 0;
+    color: #333;
+    text-align: center;
+  }
+
+  p {
+    font-size: medium;
+    margin: 10px 0 0 0;
     color: #333;
     text-align: center;
   }
