--- a/src/app/components/organisms/perfums-container/perfums-container.component.scss
+++ b/src/app/components/organisms/perfums-container/perfums-container.component.scss
@@ -44,6 +44,8 @@
   }
 
   .fragrance-card {
-    margin-left: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
