new: add new references

--- a/src/app/components/atoms/card-atom/card-atom.component.html
+++ b/src/app/components/atoms/card-atom/card-atom.component.html
@@ -1,6 +1,6 @@
 <div class="card fragrance-card">
   <div class="card-image">
-    <img src={{url}} alt="perfum" />
+    <img src={{url}} alt="perfum" loading="lazy" />
   </div>
   <h4>{{name}}</h4>
   <p>Marca: {{brand}}</p>
