add: implement ws icon to contact with us

--- a/src/app/components/pages/dashboard/perfums/perfums.component.html
+++ b/src/app/components/pages/dashboard/perfums/perfums.component.html
@@ -1,11 +1,15 @@
-<div class="">
+<div >
   <app-navbar />
 </div>
 
-<div class="">
+<div >
   <app-banner />
 </div>
 
-<div class="">
+<div >
     <app-perfums-container />
-  </div>
+</div>
+
+<div>
+    <app-wsbutton-atom>contactanos</app-wsbutton-atom>
+</div>
