add: implement ws icon to contact with us

--- a/src/app/components/atoms/wsbutton-atom/wsbutton-atom.component.html
+++ b/src/app/components/atoms/wsbutton-atom/wsbutton-atom.component.html
@@ -3,6 +3,7 @@
     id='whatsapp'
     aria-label="whatsapp"
     tabindex="0"
+    (click)="onContactClick()"
   >
     <span class="tooltiptext">Contactanos</span>
 </button>
