--- a/src/app/components/pages/dashboard/perfums/perfums.component.html
+++ b/src/app/components/pages/dashboard/perfums/perfums.component.html
@@ -11,5 +11,5 @@
 </div>
 
 <div>
-    <app-wsbutton-atom>contactanos</app-wsbutton-atom>
+    <app-wsbutton-atom (contactRequest)="contactarWhatsApp()" >contactanos</app-wsbutton-atom>
 </div>
