change: update banner image

--- a/src/app/components/atoms/banner/banner.component.html
+++ b/src/app/components/atoms/banner/banner.component.html
@@ -1,6 +1,6 @@
 <div class="banner-container">
   <img
-    src="./../../../../assets/images/banner_provisional.jpg"
+    src="./../../../../assets/images/banner.png"
     alt="Banner Image"
     class="banner-image"
   />
