fix: change value in dropdown put search bar empty

--- a/src/app/components/organisms/perfums-container/perfums-container.component.html
+++ b/src/app/components/organisms/perfums-container/perfums-container.component.html
@@ -5,7 +5,7 @@
     (searchTermChange)="onSearchTerm($event)"
     (searchError)="handleSearchError($event)"
     (loadingChange)="onLoadingChange($event)"
-    [clear]="limpiar"
+    [ejecutarAccion]="limpiar"
   ></app-search>
 
   
