--- a/src/app/components/organisms/perfums-container/perfums-container.component.scss
+++ b/src/app/components/organisms/perfums-container/perfums-container.component.scss
@@ -32,6 +32,14 @@
   gap: 10px;
 }
 
+.dropdown {
+  position: relative;
+  width: 100%;
+  margin: 0.5rem 0;
+  /* Asegura que el dropdown no sea más ancho que el viewport en móviles */
+  max-width: min(100%, 300px);
+}
+
 @media (max-width: 768px) {
   .fragrance-container {
     padding: 10px;
@@ -61,5 +69,13 @@
     justify-content: center;
     align-items: center;
     max-width: 100%;
+  }
+
+  .dropdown {
+    position: relative;
+    width: 100%;
+    margin: 0.5rem 0;
+    /* Asegura que el dropdown no sea más ancho que el viewport en móviles */
+    max-width: min(100%, 300px);
   }
 }
